Updated player and valgrind
Player now starts with the correct weapon equiped
Valgrind now does not show information while running

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -33,7 +33,7 @@ add_subdirectory(tests)
 
 # Add custom target to run Valgrind
 add_custom_target(run_valgrind
-    COMMAND valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --verbose ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}
+    COMMAND valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}
     DEPENDS ${PROJECT_NAME}
     WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
     COMMENT "Running Valgrind to check for memory leaks"
