--- a/code/tests/CMakeLists.txt
+++ b/code/tests/CMakeLists.txt
@@ -16,7 +16,9 @@ find_package(GTest REQUIRED)
 
 # List all test source files
 set(TEST_SOURCES
+    ${CMAKE_SOURCE_DIR}/tests/test_gameObjects.cpp
     ${CMAKE_SOURCE_DIR}/tests/test_sql.cpp
+    ${CMAKE_SOURCE_DIR}/tests/test_xml.cpp
     ${CMAKE_SOURCE_DIR}/tests/tests.cpp
 )
 
