Added unit tests for player

--- a/code/tests/CMakeLists.txt
+++ b/code/tests/CMakeLists.txt
@@ -7,33 +7,34 @@ project(dungeon_crawler_tests)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Find GoogleTest package
-find_package(GTest REQUIRED)
+# Set the CMAKE_MODULE_PATH to include the directory containing FindGMock.cmake
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
 
-# Include directories
-# include_directories(${CMAKE_SOURCE_DIR}/inc)
-# include_directories(${CMAKE_SOURCE_DIR}/external/sqlite3/inc)  # Include SQLite3 headers
+# Find GoogleTest and GoogleMock packages
+find_package(GTest REQUIRED)
+find_package(GMock REQUIRED)
 
 # List all test source files
 set(TEST_SOURCES
     ${CMAKE_SOURCE_DIR}/tests/test_enemy.cpp
     ${CMAKE_SOURCE_DIR}/tests/test_gameObjects.cpp
     ${CMAKE_SOURCE_DIR}/tests/test_gameObjectsFactory.cpp
+    ${CMAKE_SOURCE_DIR}/tests/test_player.cpp
     ${CMAKE_SOURCE_DIR}/tests/test_sql.cpp
     ${CMAKE_SOURCE_DIR}/tests/test_xml.cpp
     ${CMAKE_SOURCE_DIR}/tests/tests.cpp
 )
 
 # Add the test executable
-add_executable(${TESTS_NAME} ${TEST_SOURCES})
+add_executable(${PROJECT_NAME} ${TEST_SOURCES})
 
-# Link GoogleTest libraries and the main library
-target_link_libraries(${TESTS_NAME} PRIVATE ${GTEST_LIBRARIES} pthread tinyxml2 ${LIBRARY_NAME})
+# Link GoogleTest, GoogleMock libraries and the main library
+target_link_libraries(${PROJECT_NAME} PRIVATE GTest::GTest GMock::GMock pthread ${LIBRARY_NAME})
 
 # Add custom target to run the tests
 add_custom_target(run_tests
-    COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${TESTS_NAME}
-    DEPENDS ${TESTS_NAME}
+    COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}
+    DEPENDS ${PROJECT_NAME}
     WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
     COMMENT "Running the tests"
 )
