--- a/code/tests/CMakeLists.txt
+++ b/code/tests/CMakeLists.txt
@@ -19,6 +19,7 @@ set(TEST_SOURCES
     ${CMAKE_SOURCE_DIR}/tests/test_enemy.cpp
     ${CMAKE_SOURCE_DIR}/tests/test_gameObjects.cpp
     ${CMAKE_SOURCE_DIR}/tests/test_gameObjectsFactory.cpp
+    ${CMAKE_SOURCE_DIR}/tests/test_location.cpp
     ${CMAKE_SOURCE_DIR}/tests/test_player.cpp
     ${CMAKE_SOURCE_DIR}/tests/test_sql.cpp
     ${CMAKE_SOURCE_DIR}/tests/test_xml.cpp
