--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -41,6 +41,7 @@ set(MAIN_SOURCES
     ${CMAKE_SOURCE_DIR}/src/GoldObject.cpp
     ${CMAKE_SOURCE_DIR}/src/Location.cpp
     ${CMAKE_SOURCE_DIR}/src/LocationFactory.cpp
+    ${CMAKE_SOURCE_DIR}/src/Logger.cpp
     ${CMAKE_SOURCE_DIR}/src/Player.cpp
     ${CMAKE_SOURCE_DIR}/src/RandomGenerator.cpp
     ${CMAKE_SOURCE_DIR}/src/SqlReader.cpp
